# monty

./: CLAUDE.md  Cargo.toml  LICENSE  Makefile  PLAN.md  README.md  codex-review.md  gemini-review.md  plan.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
.zed/: settings.json
benches/: main.rs
crates/monty/: Cargo.toml
crates/monty-cli/: Cargo.toml
crates/monty-cli/src/: main.rs
crates/monty-js/: package-lock.json
crates/monty-js/src/: convert.rs  monty_cls.rs
crates/monty-python/: Cargo.toml  monty.pyi  pyproject.toml
crates/monty-python/python/pydantic_monty/: _monty.pyi  os_access.py
crates/monty-python/src/: convert.rs  exceptions.rs  limits.rs  monty_cls.rs
crates/monty-python/tests/: test_exceptions.py  test_external.py  test_limits.py  test_os_access.py  test_os_access_compat.py  test_os_access_raw.py  test_os_calls.py  test_threading.py  test_type_check.py  test_types.py
crates/monty-type-checking/: Cargo.toml
crates/monty-type-checking/src/: type_check.rs
crates/monty-type-checking/tests/: main.rs
crates/monty-typeshed/: build.rs  update.py
crates/monty-typeshed/custom/: datetime.pyi
crates/monty-typeshed/src/: lib.rs
crates/monty/benches/: main.rs
crates/monty/src/: args.rs  callable.rs  error.rs  evaluate.rs  exception.rs  exception_private.rs  exception_public.rs  expressions.rs  for_iterator.rs  function.rs  heap.rs  heap_data.rs  intern.rs  lib.rs  namespace.rs  object.rs  os.rs  parse.rs  prepare.rs  repl.rs  run.rs  run_frame.rs  run_progress.rs  snapshot.rs  value.rs
crates/monty/test_cases/: bytes__methods.py  compare__mixed_types.py  comprehension__all.py  datetime__core.py  ext_call__basic.py  ext_call__elif.py  ext_call__for.py  ext_call__if.py  if__elif_else.py  int__bigint.py  int__bigint_errors.py  int__ops.py  (+3 more)
examples/: README.md
examples/datetime_planning/: README.md  main.py
scripts/: iter_test_methods.py
src/: callable.rs  evaluate.rs  exceptions.rs  expressions.rs  function.rs  heap.rs  lib.rs  main.rs  namespace.rs  object.rs  parse.rs  prepare.rs  run.rs  types.rs  value.rs
src/values/: dict.rs
test_cases/: bench__kitchen_sink.py  dict__method_items.py  dict__method_keys.py  dict__method_values.py  global__error_assigned_before.py  global__explicit_read.py  global__explicit_write.py  global__implicit_read.py  global__multiple_functions.py  global__mutate_dict.py  global__mutate_list_append.py  global__mutate_list_insert.py  global__mutate_multiple.py  global__nested_inner_global.py  global__nested_inner_read.py  global__reassign_list.py  global__shadowing.py  global__shadowing_unchanged.py  id__bytes_literals_distinct.py  id__empty_list_id.py  id__int_copy_distinct.py  id__is_number_is_number.py  id__list_literals_distinct.py  id__str_literals_distinct.py  id__tuple_literals_distinct.py
tests/: datatest_runner.rs  id.rs
(+64 files in other folders)
