[workspace]
resolver = "2"
members = ["crates/monty", "crates/monty-cli"]

[profile.release]
lto = "fat"
codegen-units = 1
strip = true

[profile.profiling]
inherits = "release"
debug = true
strip = false
lto = false

[workspace.lints.clippy]
dbg_macro = "warn"
# print_stdout = "warn"

# in general we lint against the pedantic group, but we will whitelist
# certain lints which we don't want to enforce (for now)
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"  # TODO remove and fix
cast_possible_wrap = "allow"  # TODO remove and fix
cast_sign_loss = "allow"  # TODO remove and fix
cast_precision_loss = "allow"
doc_markdown = "allow"
match_same_arms = "allow"
missing_errors_doc = "allow"
needless_pass_by_value = "allow"  # TODO disable
similar_names = "allow"
too_many_lines = "allow"
unused_self = "allow"
