[package]
name = "monty-python"
description = "Python bindings for the Monty sandboxed Python interpreter"
readme = "README.md"
version = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[lib]
name = "monty"
crate-type = ["cdylib"]

[dependencies]
monty = { path = "../monty" }
monty_type_checking = { path = "../monty-type-checking" }
pyo3 = { version = "0.27.2", features = ["indexmap", "generate-import-lib", "num-bigint"] }
num-bigint = { workspace = true }
indexmap = { workspace = true }
serde = { workspace = true }
postcard = { workspace = true }

[build-dependencies]
pyo3-build-config = { version = "0.27.2", features = ["resolve-config"] }

[features]
# make extensions visible to cargo vendor
extension-module = ["pyo3/generate-import-lib"]

[lints]
workspace = true
