[build-system]
requires = ["maturin>=1.9.4,<2.0"]
build-backend = "maturin"

[project]
# the module is named `pydantic_monty`
name = "pydantic-monty"
description = "Python bindings for the Monty sandboxed Python interpreter"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["license", "version"]

[project.urls]
Homepage = "https://github.com/pydantic/monty"
Source = "https://github.com/pydantic/monty"

[tool.maturin]
python-source = "python"
module-name = "pydantic_monty._monty"
features = ["pyo3/extension-module"]

[dependency-groups]
dev = [
    "anyio>=4.0",
    "black>=25.12.0",
    "dirty-equals>=0.11",
    "inline-snapshot>=0.31.1",
    "pytest>=9.0.2",
    "pytest-examples>=0.0.14",
    "pytest-pretty>=1.3.0",
]

[tool.pytest.ini_options]
anyio_mode = "auto"
xfail_strict = true
filterwarnings = ["error"]
